[package]
name = "WebScrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
serde_json = "1"
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["alloc"] }
crossbeam-channel = "0.5"
